--- a/FlowApp/Views/Manage/ManageLogins.cshtml
+++ b/FlowApp/Views/Manage/ManageLogins.cshtml
@@ -1,5 +1,5 @@
-﻿@model FlowApp.Models.ManageLoginsViewModel
-@using Microsoft.Owin.Security
+﻿@using Microsoft.Owin.Security
+@model FlowApp.Models.ManageLoginsViewModel
 @{
     ViewBag.Title = "外部ログインの管理";
 }
@@ -9,7 +9,8 @@
 <p class="text-success">@ViewBag.StatusMessage</p>
 @{
     var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
-    if (loginProviders.Count() == 0) {
+    if (loginProviders.Count() == 0)
+    {
         <div>
             <p>
                 構成済みの外部認証サービスはありません。外部サービス経由のログインをサポートするようにこの ASP.NET アプリケーションを設定する方法の
@@ -24,30 +25,30 @@
             <h4>登録済みのログイン</h4>
             <table class="table">
                 <tbody>
-                    @foreach (var account in Model.CurrentLogins)
-                    {
-                        <tr>
-                            <td>@account.LoginProvider</td>
-                            <td>
-                                @if (ViewBag.ShowRemoveButton)
+                @foreach (var account in Model.CurrentLogins)
+                {
+                    <tr>
+                        <td>@account.LoginProvider</td>
+                        <td>
+                            @if (ViewBag.ShowRemoveButton)
+                            {
+                                using (Html.BeginForm("RemoveLogin", "Manage"))
                                 {
-                                    using (Html.BeginForm("RemoveLogin", "Manage"))
-                                    {
-                                        @Html.AntiForgeryToken()
-                                        <div>
-                                            @Html.Hidden("loginProvider", account.LoginProvider)
-                                            @Html.Hidden("providerKey", account.ProviderKey)
-                                            <input type="submit" class="btn btn-default" value="削除" title="この @account.LoginProvider ログインをアカウントから削除します" />
-                                        </div>
-                                    }
+                                    @Html.AntiForgeryToken()
+                                    <div>
+                                        @Html.Hidden("loginProvider", account.LoginProvider)
+                                        @Html.Hidden("providerKey", account.ProviderKey)
+                                        <input type="submit" class="btn btn-default" value="削除" title="この @account.LoginProvider ログインをアカウントから削除します"/>
+                                    </div>
                                 }
-                                else
-                                {
-                                    @: &nbsp;
-                                }
-                            </td>
-                        </tr>
-                    }
+                            }
+                            else
+                            {
+                                @: &nbsp;
+                            }
+                        </td>
+                    </tr>
+                }
                 </tbody>
             </table>
         }
@@ -57,12 +58,12 @@
             {
                 @Html.AntiForgeryToken()
                 <div id="socialLoginList">
-                <p>
-                    @foreach (AuthenticationDescription p in Model.OtherLogins)
-                    {
-                        <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="@p.Caption アカウントを使用してログイン">@p.AuthenticationType</button>
-                    }
-                </p>
+                    <p>
+                        @foreach (AuthenticationDescription p in Model.OtherLogins)
+                        {
+                            <button type="submit" class="btn btn-default" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="@p.Caption アカウントを使用してログイン">@p.AuthenticationType</button>
+                        }
+                    </p>
                 </div>
             }
         }
