--- a/FlowApp/Views/Shared/_Layout.cshtml
+++ b/FlowApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                 <li>@Html.ActionLink("ホーム", "Index", "Home")</li>
                 <li>@Html.ActionLink("詳細", "About", "Home")</li>
                 <li>@Html.ActionLink("連絡先", "Contact", "Home")</li>
+                <li>@Html.ActionLink("記事", "Index", "Articles")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
