--- a/FlowApp/Views/Proposals/Create.cshtml
+++ b/FlowApp/Views/Proposals/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlowApp.Models.Article
+﻿@model FlowApp.Models.ProposalDraft
 
 @{
     ViewBag.Title = "Create";
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Article</h4>
+        <h4>Proposal</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
