--- a/FlowApp/Views/Shared/_Layout.cshtml
+++ b/FlowApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                 <li>@Html.ActionLink("詳細", "About", "Home")</li>
                 <li>@Html.ActionLink("連絡先", "Contact", "Home")</li>
                 <li>@Html.ActionLink("記事", "Index", "Articles")</li>
+                <li>@Html.ActionLink("投稿", "Index", "Proposals")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
