下書き履歴が保存できるように

--- a/FlowApp/Views/Proposals/Index.cshtml
+++ b/FlowApp/Views/Proposals/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FlowApp.Models.ProposalDraft>
+﻿@model IEnumerable<FlowApp.Models.ProposalViewModel>
 
 @{
     ViewBag.Title = "Index";
