公開依頼をかけられるように

--- a/FlowApp/Views/Proposals/Edit.cshtml
+++ b/FlowApp/Views/Proposals/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model FlowApp.Models.ProposalDraft
+﻿@model FlowApp.Models.ProposalViewModel
 
 @{
     ViewBag.Title = "Edit";
@@ -10,24 +10,34 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Proposal</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <hr/>
+        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Title, new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Title, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model => model.Title, "", new {@class = "text-danger"})
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Status, new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.Status)
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" name="Action" value="Save" class="btn btn-default"/>
+            </div>
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" name="Action" value="Request" class="btn btn-default"/>
             </div>
         </div>
     </div>
