承認・リジェクトを実装

--- a/FlowApp/Views/Proposals/Edit.cshtml
+++ b/FlowApp/Views/Proposals/Edit.cshtml
@@ -39,6 +39,12 @@
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" name="Action" value="Request" class="btn btn-default"/>
             </div>
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" name="Action" value="Reject" class="btn btn-default" />
+            </div>
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" name="Action" value="Approval" class="btn btn-default" />
+            </div>
         </div>
     </div>
 }
