--- a/FlowApp/Views/Proposals/Index.cshtml
+++ b/FlowApp/Views/Proposals/Index.cshtml
@@ -1,46 +1,11 @@
 ﻿@model IEnumerable<FlowApp.Models.ProposalViewModel>
 
-@{
-    ViewBag.Title = "Index";
-}
+<h2>Showns</h2>
 
-<h2>Index</h2>
+@Html.Partial("_ButtonGroup")
 
-<p>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-        @Html.ActionLink("Index", "Index", null, null, new { @class = "btn" })
-        @Html.ActionLink("Drafts", "Drafts", null, null, new { @class = "btn" })
-    </div>
-</p>
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th></th>
-    </tr>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-            </td>
-        </tr>
-    }
-
-</table>
+@Html.Partial("_Proposals", Model)
