--- a/FlowApp/Views/Proposals/Showns.cshtml
+++ b/FlowApp/Views/Proposals/Showns.cshtml
@@ -1,6 +1,6 @@
-﻿@model IEnumerable<FlowApp.Models.ProposalViewModel>
+﻿@model System.Collections.Generic.IEnumerable<FlowApp.Models.ProposalViewModel>
 
-<h2>下書き (自分の)</h2>
+<h2>表示 (すべて)</h2>
 
 @Html.Partial("_ButtonGroup")
 
