記事に非表示をつけた

--- a/FlowApp/Views/Articles/Index.cshtml
+++ b/FlowApp/Views/Articles/Index.cshtml
@@ -6,13 +6,13 @@
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Title)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Displayed)
         </th>
         <th></th>
     </tr>
@@ -23,8 +23,9 @@
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.DisplayFor(modelItem => item.Displayed)
+        </td>
+        <td>
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
     </tr>
