--- a/FlowApp/Views/Proposals/_ButtonGroup.cshtml
+++ b/FlowApp/Views/Proposals/_ButtonGroup.cshtml
@@ -1,4 +1,4 @@
-<div class="btn-group" role="group" aria-label="...">
+﻿<div class="btn-group" role="group" aria-label="...">
     @Html.ActionLink("すべて", "Index", null, null, new { @class = "btn btn-default" })
     @Html.ActionLink("下書き (自分の)", "Drafts", null, null, new { @class = "btn btn-default" })
     @Html.ActionLink("承認箱 (すべて)", "Waitings", null, null, new { @class = "btn btn-default" })
