--- a/FlowApp/Views/Proposals/Showns.cshtml
+++ b/FlowApp/Views/Proposals/Showns.cshtml
@@ -1,6 +1,6 @@
 ﻿@model System.Collections.Generic.IEnumerable<FlowApp.Models.ProposalViewModel>
 
-<h2>表示 (すべて)</h2>
+<h2>公開中 (すべて)</h2>
 
 @Html.Partial("_ButtonGroup")
 
