依頼と承認の明確化

--- a/FlowApp/Views/Proposals/Edit.cshtml
+++ b/FlowApp/Views/Proposals/Edit.cshtml
@@ -37,13 +37,16 @@
                 <input type="submit" name="Action" value="Save" class="btn btn-default"/>
             </div>
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" name="Action" value="Request" class="btn btn-default"/>
+                <input type="submit" name="Action" value="Request/Publish" class="btn btn-default"/>
             </div>
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" name="Action" value="Reject" class="btn btn-default" />
             </div>
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" name="Action" value="Approval" class="btn btn-default" />
+            </div>
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" name="Action" value="Request/End" class="btn btn-default" />
             </div>
         </div>
     </div>
