投稿者・承認者のボタンを分離

--- a/FlowApp/Views/Proposals/Edit.cshtml
+++ b/FlowApp/Views/Proposals/Edit.cshtml
@@ -32,22 +32,14 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" name="Action" value="Save" class="btn btn-default"/>
-            </div>
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" name="Action" value="Request/Publish" class="btn btn-default"/>
-            </div>
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" name="Action" value="Reject" class="btn btn-default" />
-            </div>
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" name="Action" value="Approval" class="btn btn-default" />
-            </div>
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" name="Action" value="Request/End" class="btn btn-default" />
-            </div>
+        <div class="btn-group" role="group" aria-label="...">
+            <input type="submit" name="Action" value="Save" class="btn btn-default"/>
+            <input type="submit" name="Action" value="Request/Publish" class="btn btn-default"/>
+            <input type="submit" name="Action" value="Request/End" class="btn btn-default"/>
+        </div>
+        <div class="btn-group" role="group" aria-label="...">
+            <input type="submit" name="Action" value="Reject" class="btn btn-default"/>
+            <input type="submit" name="Action" value="Approval" class="btn btn-default"/>
         </div>
     </div>
 }
