不要な文字を削除

--- a/FlowApp/Views/Proposals/_Proposals.cshtml
+++ b/FlowApp/Views/Proposals/_Proposals.cshtml
@@ -33,7 +33,7 @@
                 @Html.DisplayFor(modelItem => item.DraftUser)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id })
             </td>
         </tr>
     }
