記事掲載のフローと承認を分割

--- a/FlowApp/Views/Proposals/Edit.cshtml
+++ b/FlowApp/Views/Proposals/Edit.cshtml
@@ -34,13 +34,13 @@
 
         <div class="btn-group" role="group" aria-label="...">
             <input type="submit" name="Action" value="Save" class="btn btn-default"/>
-            <input type="submit" name="Action" value="Request" class="btn btn-default" />
+            <input type="submit" name="Action" value="Request/Publish" class="btn btn-default" />
             <input type="submit" name="Action" value="Request/End" class="btn btn-default" />
             <input type="submit" name="Action" value="Cancel" class="btn btn-default" />
         </div>
         <div class="btn-group" role="group" aria-label="...">
             <input type="submit" name="Action" value="Reject" class="btn btn-default"/>
-            <input type="submit" name="Action" value="Approval" class="btn btn-default"/>
+            <input type="submit" name="Action" value="Approve" class="btn btn-default"/>
         </div>
     </div>
 }
