--- a/FlowApp/Views/Proposals/_ButtonGroup.cshtml
+++ b/FlowApp/Views/Proposals/_ButtonGroup.cshtml
@@ -1,9 +1,12 @@
 ﻿<div class="btn-group" role="group" aria-label="...">
-    @Html.ActionLink("下書き (自分の)", "Drafts", null, null, new { @class = "btn btn-default" })
+    @Html.ActionLink("下書き (あなたの)", "Drafts", null, null, new { @class = "btn btn-default" })
+    @Html.ActionLink("承認依頼済み (あなたの)", "Requestings", null, null, new { @class = "btn btn-default" })
+    @Html.ActionLink("公開中 (あなたの)", "YourPublishes", null, null, new { @class = "btn btn-default" })
+    @Html.ActionLink("公開終了 (あなたの)", "YourEnds", null, null, new { @class = "btn btn-default" })
 </div>
 <div class="btn-group" role="group" aria-label="...">
     @Html.ActionLink("すべて", "Index", null, null, new { @class = "btn btn-default" })
-    @Html.ActionLink("未承認 (すべて)", "Pendings", null, null, new { @class = "btn btn-default" })
+    @Html.ActionLink("要承認 (すべて)", "Pendings", null, null, new { @class = "btn btn-default" })
     @Html.ActionLink("公開中 (すべて)", "Publishes", null, null, new { @class = "btn btn-default" })
     @Html.ActionLink("公開終了 (すべて)", "Ends", null, null, new { @class = "btn btn-default" })
 </div>
